--- a/Rock-Paper-Scissors/Equalizing chances/task-info.yaml
+++ b/Rock-Paper-Scissors/Equalizing chances/task-info.yaml
@@ -115,5 +115,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/314/stages/1765/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 27 Jan 2023 03:40:04 UTC
 record: -1
