--- a/Rock-Paper-Scissors/Unfair computer/task-info.yaml
+++ b/Rock-Paper-Scissors/Unfair computer/task-info.yaml
@@ -52,7 +52,7 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/314/stages/1764/implement#comment
+feedback_link: https://hyperskill.org/learn/step/24615#comment
 status: Solved
 feedback:
   message: Congratulations!
