--- a/Rock-Paper-Scissors/Endless game/task-info.yaml
+++ b/Rock-Paper-Scissors/Endless game/task-info.yaml
@@ -142,9 +142,9 @@ files:
 
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/314/stages/1766/implement#comment
+feedback_link: https://hyperskill.org/learn/step/24617#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: Fri, 27 Jan 2023 04:02:06 UTC
-record: -1
+record: 3
