--- a/Rock-Paper-Scissors/Equalizing chances/task-info.yaml
+++ b/Rock-Paper-Scissors/Equalizing chances/task-info.yaml
@@ -114,7 +114,7 @@ files:
 
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/314/stages/1765/implement#comment
+feedback_link: https://hyperskill.org/learn/step/24616#comment
 status: Solved
 feedback:
   message: Congratulations!
