--- a/Rock-Paper-Scissors/Scoring the game/task-info.yaml
+++ b/Rock-Paper-Scissors/Scoring the game/task-info.yaml
@@ -192,6 +192,9 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/314/stages/1767/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/24618#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 27 Jan 2023 20:40:27 UTC
 record: -1
