--- a/Rock-Paper-Scissors/More options/task-info.yaml
+++ b/Rock-Paper-Scissors/More options/task-info.yaml
@@ -187,5 +187,9 @@ files:
     \ the score.\_\");\n        return CheckResult.correct();\n\n    }\n}\n"
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/24619#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Mon, 30 Jan 2023 01:36:05 UTC
 record: -1
