--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/859208/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 27 Jan 2023 19:40:18 UTC
+update_date: Mon, 30 Jan 2023 01:01:50 UTC
 stages:
 - id: 1764
   step: 24615
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 1768
   step: 24619
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Write, compile, and run
